<resources>
    <string name="app_name">Evaluate</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="logo">Logo</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_account">AccountActivity</string>
    <string name="account">Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="verification">Status</string>

    <string name="delete_account">Delete Account</string>
    <string name="update_details">Update details</string>
    <string name="sample_first_name">John</string>
    <string name="sample_last_name">Doe</string>
    <string name="sample_email">johndoe@gmail.com</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="new_password">New Password (optional)</string>
    <string name="delete_account_warning">Enter login details to confirm</string>


    <string name="new_measurement_title">New Measurement</string>
    <string name="blood_glucose_concentration">Blood Glucose Concentration:</string>
    <string name="recent_food">Food recently consumed</string>
    <string name="no_recent_food">No food recently consumed</string>
    <string name="exercise">Recent physical activity</string>

    <!--Symptoms-->
    <string name="symptoms">Symptoms</string>
    <string name="dizziness">Dizziness</string>
    <string name="fatigue">Fatigue</string>
    <string name="blurred_vision">Blurred Vision</string>
    <string name="Shakiness">Shakiness</string>
    <string name="pale_skin">Pale skin</string>
    <string name="palpitations">Palpitations</string>
    <string name="rapid_breathing">Rapid Breathing</string>
    <string name="confusion">Confusion</string>
    <string name="difficulty_concentrating">Difficulty\nConcentrating</string>
    <string name="thirstiness">Thirstiness</string>
    <string name="frequent_urination">Frequent\nUrination</string>
    <string name="nausea">Nausea</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="headache">Headache</string>

    <!--Medications-->
    <string name="medications_title">Medications</string>

    <!--Notes-->
    <string name="notes_title">Notes</string>

    <string name="submit">Submit</string>

    <string name="recent">Recent</string>
    <string name="measurements">Measurements</string>
    <string name="see_more">See More</string>

    <string name="today_label">Today</string>
    <string name="score">Score:</string>

    <string name="hints_label">Hints</string>

    <string name="percentage_sign">/100</string>

    <string name="verify">Verify Email</string>

    <!--Hints-->
    <string name="measure_more_hint">Improve your score by taking more frequent measurements throughout the day.
    </string>

    <string name="reauthenticate">Reauthenticate</string>
    <string name="reauthenticate_warning">Enter login details to continue</string>
    <string name="continue_">Continue</string>
    <string name="title_activity_day_view">DayViewActivity</string>
    <string name="title_activity_week_view">WeekViewActivity</string>
    <string name="title_activity_month_view">MonthViewActivity</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="archive">Archive</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_score">---</string>

    <string name="dashboard">Dashboard</string>

    <string name="recent_exercise">Recent physical activity</string>

    <string name="avatar_icon">Avatar Icon</string>

    <string name="monthly_score">Monthly Score:</string>
    <string name="weekly_score">Weekly Score:</string>

    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>

    <string name="no_measurements">No measurements</string>
    <string name="no_recent_measurements">No recent measurements</string>
    <string name="no_measurements_date">No measurements for selected date</string>

    <string name="error">Error</string>

    <string name="add_measurement">Add a measurements to get started</string>

    <string name="reset_password">Reset Password</string>
    <string name="reset_password_prompt">Enter email to continue</string>

    <string name="unit">%1$s mmol/L</string>

    <string name="tips_label">Tips</string>

    <string name="frequent_hint">Improve your score by taking more frequent measurements throughout the day.</string>
    <string name="add_hint">Add a measurement to get started</string>
    <string name="verify_hint">Verify your email</string>
    <string name="range_hint">Keep your blood glucose concentration within a safe range.</string>
    <string name="high_hint">Keep your highest blood glucose concentration measurement within the safe range to ensure a
        good score.
    </string>
    <string name="low_hint">Keep your lowest blood glucose concentration measurement within the safe range to ensure a
        good score.
    </string>
    <string name="low_score_hint">If your score is consistently low despite adequate management, seek guidance from a
        healthcare professional. It may be necessary to try a different treatment, medication, or make changes to your
        lifestyle.
    </string>
    <string name="num_measurements_hint">A higher number of symptoms in a day indicates management or treatment is not
        optimal.
    </string>
    <string name="percent_safe_hint">A higher proportion of measurements within the safe range will result in a higher
        score.
    </string>
    <string name="time_hint">To ensure a higher score, take your first measurement early on in the day, and your last
        measurement late in the day. Ensure you take lots of measurements in between.
    </string>
    <string name="meds_hint">Use the \'Medications\' section when adding a new measurement to record current medications
        and dosages for later viewing.
    </string>
    <string name="notes_hint">Record any changes or abnormalities with the \'Notes\' section when adding a new
        measurement.
    </string>
    <string name="sick_hint">Temporary illnesses such as colds/flu can impact your ability to maintain a healthy blood
        glucose concentration. Be sure to record any temporary illnesses when taking a new measurement, using the
        \'Notes\' section.
    </string>
    <string name="hypo_hint">A blood glucose concentration below 4mmol/L may indicate hypoglycaemia. Seek medical
        advice.
    </string>
    <string name="hyper_hint">A blood glucose concentration above 8.5mmol/L may indicate hyperglycaemia. Seek medical
        advice.
    </string>
    <string name="emergency_hint">Seek immediate medical attention if you are unable to control your blood glucose
        concentration to within a safe range.
    </string>
    <string name="good_hint">Keep up the good work!</string>
    <string name="continue_hint">Keep trying to maintain a good score.</string>


</resources>
