<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/group_1"
           android:checkableBehavior="none">

        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/dashboard_icon"
                android:iconTint="@color/white"
                android:title="@string/dashboard"/>
    </group>

    <item android:title="@string/archive">
        <menu>
            <group android:id="@+id/group_2"
                   android:checkableBehavior="none">
                <item
                        android:id="@+id/nav_day_view"
                        android:icon="@drawable/assess_icon"
                        android:iconTint="@color/white"
                        android:title="@string/day"/>
                <item
                        android:id="@+id/nav_week_view"
                        android:icon="@drawable/assess_icon"
                        android:iconTint="@color/white"
                        android:title="@string/week"/>
                <item
                        android:id="@+id/nav_month_view"
                        android:icon="@drawable/assess_icon"
                        android:iconTint="@color/white"
                        android:title="@string/month"/>
            </group>
        </menu>
    </item>

    <group android:id="@+id/group_3"
           android:checkableBehavior="none">
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/account_icon"
                android:iconTint="@color/white"
                android:title="@string/account"/>
        <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/sign_out_icon"
                android:iconTint="@color/white"
                android:title="@string/sign_out"/>
    </group>

</menu>
