<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            tools:context=".LoginActivity">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="163dp"
                android:layout_height="152dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.502"/>

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_input"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textCapWords"
                android:ems="10"
                android:hint="@string/prompt_email"
                app:backgroundTint="@color/white"
                android:autofillHints="email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/prompt_password"
                app:backgroundTint="@color/white"
                android:autofillHints="password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/email_input"
                app:layout_constraintStart_toStartOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="@+id/email_input" app:layout_constraintHorizontal_bias="0.0"
        />

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:id="@+id/login_button"
                android:background="@drawable/login_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
                app:layout_constraintStart_toStartOf="@+id/password_input"
                app:layout_constraintEnd_toEndOf="@+id/password_input"/>
        <Button
                android:text="@string/action_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/register_button"
                android:textAllCaps="false"
                android:textStyle="normal"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/register_button"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="@+id/login_button" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/login_button" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/action_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:id="@+id/forgot_password_text"
                android:textColor="@color/white" android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/password_input"
                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.502"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="45dp"
                android:layout_height="49dp"
                android:id="@+id/progress_bar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:visibility="invisible"
                android:layout_marginStart="8dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>