<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            tools:context=".ChangeDetailsActivity">


        <TextView android:id="@+id/title"
                  android:text="@string/update_details"
                  android:textSize="24sp"
                  android:gravity="center_horizontal"
                  android:textColor="@color/white" android:layout_width="wrap_content"
                  android:layout_marginTop="116dp"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_height="wrap_content">

        </TextView>

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:autofillHints="firstname"
                android:background="@drawable/login_item"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:id="@+id/first_name_input"
                android:textColorHint="@color/textDark"
                android:textColor="@color/textDark"
                android:layout_marginTop="116dp"
                app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
        <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:inputType="textPersonName|textCapWords"
                android:autofillHints="lastname"
                android:background="@drawable/login_item"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:id="@+id/last_name_input"
                android:textColorHint="@color/textDark"
                android:textColor="@color/textDark"
                app:layout_constraintStart_toStartOf="@+id/first_name_input"
                app:layout_constraintEnd_toEndOf="@+id/first_name_input"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/first_name_input"/>
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_input"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:background="@drawable/login_item"
                android:padding="10dp"
                android:autofillHints="email"
                android:textColorHint="@color/textDark"
                android:textColor="@color/textDark"
                app:layout_constraintStart_toStartOf="@+id/last_name_input" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/last_name_input" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/last_name_input"/>
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/login_item"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:autofillHints="password"
                android:textColorHint="@color/textDark"
                android:textColor="@color/textDark"
                app:layout_constraintStart_toStartOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="@+id/email_input" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/email_input"/>

        <Button
                android:id="@+id/update_button"
                android:background="@drawable/login_button"
                android:text="@string/update" android:textColor="@color/white" android:layout_height="71dp"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                app:layout_constraintStart_toStartOf="@+id/password_input"
                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0">

        </Button>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>