<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            tools:context=".ForgotPasswordActivity">

        <TextView
                android:text="@string/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_text_view2" android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="116dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"/>
        <TextView
                android:text="@string/reset_password_prompt"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/enter_details_label2" android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="112dp"
                app:layout_constraintTop_toBottomOf="@+id/email_text_view2"/>
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textCapWords"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:background="@drawable/login_item"
                android:padding="10dp"
                android:autofillHints="email"
                android:textColorHint="@color/textDark"
                android:textColor="@color/textDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/enter_details_label2"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="83dp"
                android:layout_height="51dp"
                android:id="@+id/progress_bar2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/submit"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:background="@drawable/login_button"
                android:layout_height="71dp"
                android:id="@+id/submit_email_button" android:textColor="@color/white"
                android:stateListAnimator="@null"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/email_input2" app:layout_constraintVertical_bias="1.0"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>